@@ -5,4 +5,6 @@ commands =
 
 [pytest]
 addopts = --ignore doc
+flakes-ignore =
+    test_*.py ImportStarUsed
 
